# multicoretests-ci

./: .ocamlformat  Dockerfile  LICENSE.md  README.md  compiler-ci-lib.opam  compiler-ci-local.opam  compiler-ci-service.opam  compiler-ci.opam  dune-project  multicoretests-ci-lib.opam  multicoretests-ci.opam  stack.yml
lib/: build.ml  cluster_build.ml  commits.ml  conf.ml  dune  github.ml  spec.ml
service/: build.ml  cluster_build.ml  dune
